<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">


    <RelativeLayout
        android:id="@+id/icon_container"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gmail_name_icon"
            android:src="@drawable/bg_circle"
            app:tint="#ffcc00" />

        <TextView
            android:id="@+id/icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:text="@string/gmail_circle_icon"/>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            
            <ImageView
                android:id="@+id/mail_type_icon"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/mail_type_icon"
                android:background="@drawable/check"/>

            <TextView
                android:id="@+id/sender_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/first_initial_sender_name"/>



        </LinearLayout>

        <TextView
            android:id="@+id/mail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="12dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="12sp"
            android:textColor="#9aa09c"
            android:text="@string/mail_content_demo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        
        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#9aa09c"
            android:textSize="12sp"
            android:text="@string/time_text"/>
        
        <ImageView
            android:id="@+id/notice_mail_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/star_shape"/>


    </LinearLayout>
</LinearLayout>